apps/hello-gitops/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hello-gitops
  namespace: default
spec:
  selector:
    app: hello-gitops
  ports:
  - port: 80
    targetPort: 80
