apps/hello-gitops/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hello-gitops
  namespace: default
spec:
  ingressClassName: nginx
  rules:
  - host: hello.k8s.w2s.nl
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: hello-gitops
            port:
              number: 80
